--- a/audio_classification_usingANN.ipynb
+++ b/audio_classification_usingANN.ipynb
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9aeb88ed",
+   "id": "7ae736d0",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "4c74f0a8",
+   "id": "6e041e11",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "7bd392c4",
+   "id": "018206da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "68fc81b8",
+   "id": "e43e1cc5",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "6724229f",
+   "id": "ef157912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "d27eb971",
+   "id": "ebbb9a46",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "42bf706d",
+   "id": "cc89b2ec",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "87cc68e1",
+   "id": "9e541670",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "481659bf",
+   "id": "0850a827",
    "metadata": {},
    "source": [
     "# Model Creation"
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "378e2f0a",
+   "id": "88505ec7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "5e79f37d",
+   "id": "a13ff035",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "8dc3a97d",
+   "id": "361cdaf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "d40ee64a",
+   "id": "6b89ba52",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "da0eeee9",
+   "id": "805731c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "e4059ca9",
+   "id": "05bc50a1",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "b765b781",
+   "id": "3caee49b",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "eb8cad1b",
+   "id": "408703cf",
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "a2bf5fc8",
+   "id": "01df1b93",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90df205",
+   "id": "97d0e583",
    "metadata": {},
    "source": [
     "## Testing Some Test Audio Data\n",
@@ -1372,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "25c5a73e",
+   "id": "00c257d6",
    "metadata": {},
    "outputs": [
     {
@@ -1430,11 +1430,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aba7a758",
+   "execution_count": 146,
+   "id": "96d11bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keras weights file (<HDF5 file \"variables.h5\" (mode r+)>) saving:\n",
+      "...layers\\activation\n",
+      "......vars\n",
+      "...layers\\activation_1\n",
+      "......vars\n",
+      "...layers\\activation_2\n",
+      "......vars\n",
+      "...layers\\activation_3\n",
+      "......vars\n",
+      "...layers\\dense\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      "...layers\\dense_1\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      "...layers\\dense_2\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      "...layers\\dense_3\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      "...layers\\dropout\n",
+      "......vars\n",
+      "...layers\\dropout_1\n",
+      "......vars\n",
+      "...layers\\dropout_2\n",
+      "......vars\n",
+      "...metrics\\mean\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      "...metrics\\mean_metric_wrapper\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      "...optimizer\n",
+      "......vars\n",
+      ".........0\n",
+      ".........1\n",
+      ".........10\n",
+      ".........11\n",
+      ".........12\n",
+      ".........13\n",
+      ".........14\n",
+      ".........15\n",
+      ".........16\n",
+      ".........2\n",
+      ".........3\n",
+      ".........4\n",
+      ".........5\n",
+      ".........6\n",
+      ".........7\n",
+      ".........8\n",
+      ".........9\n",
+      "...vars\n",
+      "Keras model archive saving:\n",
+      "File Name                                             Modified             Size\n",
+      "config.json                                    2023-03-31 23:26:49         3224\n",
+      "metadata.json                                  2023-03-31 23:26:49           64\n",
+      "variables.h5                                   2023-03-31 23:26:50       584576\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "with open('model.pkl', 'wb') as f:\n",
+    "    pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "6f0cbfe8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "with open('label_encoder.pkl', 'wb') as le_file:\n",
+    "    pickle.dump(labelencoder, le_file)"
+   ]
   }
  ],
  "metadata": {
